kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wo-app-deployment
  labels:
    app: wo_app
spec:
  selector:
    matchLabels:
      project: wo_app-prod
  template:
    metadata:
      labels:
        project: wo_app-prod
    spec:
      containers:
        - name  : wo-app-node
          image : yevgeniis/wo_app:0.0.3
          imagePullPolicy: Always
          ports :
            - containerPort: 3000
          resources:
            requests:
              cpu: "250m"
        - name  : mongodb
          image : mongo
          ports :
            - containerPort: 27017
