kubernetes/kubernetes-deployment-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wo-app-deployment
  labels:
    app: wo_app-deployment
spec:
  selector:
    matchLabels:
      project: wo_app-prod
  template:
    metadata:
      labels:
        project: wo_app-prod
    spec:
      containers:
        - name  : wo-app-node
          image : yevgeniis/wo_app:1.0.0
          ports :
            - containerPort: 3000

        - name  : mongodb
          image : mongo
          ports :
            - containerPort: 27017

---
apiVersion: v1
kind: Service
metadata:
  name:  my-auto-scaling-pod-service
  labels:
    env  : prod
    owner: yevgenii

spec:
  selector:
    project: wo_app-prod
  type :  LoadBalancer
  ports:
  - name      :  app-listener
    port      :  3000
    targetPort:  3000
