kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  wo-app-service
  labels:
    app: wo_app
spec:
  selector:
    project: wo_app-prod
  type :  ClusterIP
  ports:
  - name      :  app-listener
    protocol  :  'TCP'
    port      :  80
    targetPort:  3000
