kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wo-app
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
      - api.xarfa.com
      secretName: wo-app-tls-secret
  ingressClassName: nginx
  rules:
  - host: "api.xarfa.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wo-app-service
            port:
              number: 80
